src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who is the Primary Competitor on this Opportunity</description>
        <inlineHelpText>Who is the Primary Competitor on this Opportunity</inlineHelpText>
        <label>Competitor</label>
        <referenceTo>Competition__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IGD__Collection_Id__c</fullName>
        <label>Collection Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projet_CEP__c</fullName>
        <inlineHelpText>inscrire ici le numéro de dossier de CEP quand l&apos;opportunité est converie en projet</inlineHelpText>
        <label>Projet  CEP</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Raisons_de_la_perte__c</fullName>
        <label>Raisons de la perte</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Prix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Délais</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concurrence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gestion du cas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conflit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manque de ressouces</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT TO PACKAGE. Only for unit test</description>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.WON</columns>
        <columns>OPPORTUNITY.CLOSED</columns>
        <columns>Raisons_de_la_perte__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Toutes les opportunités</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.WON</columns>
        <columns>OPPORTUNITY.CLOSED</columns>
        <columns>Raisons_de_la_perte__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Mes opportunités ouvertes</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Opportunites_actives</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost,Closed Won</value>
        </filters>
        <label>Opportunités actives</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>